# beagle

./: .gitignore  CMakeLists.txt
libs/glfw/: cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  uninstall_cmakeRulesBuildPhase.makeDebug
libs/glfw/GLFW.xcodeproj/: project.pbxproj
libs/glfw/examples/: cmake_install.cmake
libs/glfw/examples/beagle.build/Debug/Boing.build/: dgph
libs/glfw/examples/beagle.build/Debug/Particles.build/Objects-normal/x86_64/: Particles.LinkFileList
libs/glfw/examples/beagle.build/Debug/Simple.build/: dgph
libs/glfw/examples/beagle.build/Debug/Simple.build/Objects-normal/x86_64/: Simple.LinkFileList
libs/glfw/examples/beagle.build/Debug/Wave.build/: dgph
libs/glfw/src/: cmake_install.cmake
libs/glfw/src/beagle.build/Debug/glfw.build/Objects-normal/x86_64/: cocoa_window.d  context.d  input.d  iokit_joystick.d  mach_time.d  nsgl_context.d
libs/glfw/tests/: cmake_install.cmake
libs/glfw/tests/beagle.build/Debug/accuracy.build/Objects-normal/x86_64/: accuracy.LinkFileList
libs/glfw/tests/beagle.build/Debug/clipboard.build/: dgph
libs/glfw/tests/beagle.build/Debug/cursor.build/Objects-normal/x86_64/: cursor.LinkFileList
libs/glfw/tests/beagle.build/Debug/cursoranim.build/: dgph
libs/glfw/tests/beagle.build/Debug/cursoranim.build/Objects-normal/x86_64/: cursoranim.LinkFileList
libs/glfw/tests/beagle.build/Debug/defaults.build/: dgph
libs/glfw/tests/beagle.build/Debug/defaults.build/Objects-normal/x86_64/: defaults.LinkFileList
libs/glfw/tests/beagle.build/Debug/empty.build/Objects-normal/x86_64/: empty.LinkFileList
libs/glfw/tests/beagle.build/Debug/events.build/: dgph
libs/glfw/tests/beagle.build/Debug/fsaa.build/: dgph
libs/glfw/tests/beagle.build/Debug/gamma.build/Objects-normal/x86_64/: gamma.LinkFileList
libs/glfw/tests/beagle.build/Debug/joysticks.build/: dgph
libs/glfw/tests/beagle.build/Debug/joysticks.build/Objects-normal/x86_64/: joysticks.LinkFileList
libs/glfw/tests/beagle.build/Debug/monitors.build/: dgph
libs/glfw/tests/beagle.build/Debug/reopen.build/: dgph
libs/imgui/examples/opengl_example/: imgui_impl_glfw.cpp
libs/imgui/extra_fonts/: droid.txt  test
src/: main.cpp
src/midi/: MidiManager.cpp  MidiManager.h  MidiTypes.h
src/render/: font.h  imgui_impl_glfw.cpp
submodules/glfw/: cmake_uninstall.cmake
submodules/glfw/docs/: Doxyfile
submodules/glfw/examples/beagle.build/Debug/Gears.build/: dgph
submodules/glfw/examples/beagle.build/Debug/Heightmap.build/: dgph
submodules/glfw/examples/beagle.build/Debug/Particles.build/: dgph
submodules/glfw/examples/beagle.build/Debug/SplitView.build/: dgph
submodules/glfw/src/: glfw3.pc
submodules/glfw/src/beagle.build/Debug/glfw.build/: dgph
submodules/glfw/tests/beagle.build/Debug/accuracy.build/: dgph
submodules/glfw/tests/beagle.build/Debug/cursor.build/: dgph
submodules/glfw/tests/beagle.build/Debug/empty.build/: dgph
submodules/glfw/tests/beagle.build/Debug/gamma.build/: dgph
submodules/glfw/tests/beagle.build/Debug/glfwinfo.build/: dgph
submodules/glfw/tests/beagle.build/Debug/iconify.build/: dgph
submodules/glfw/tests/beagle.build/Debug/peter.build/: dgph
submodules/glfw/tests/beagle.build/Debug/sharing.build/: dgph
submodules/glfw/tests/beagle.build/Debug/tearing.build/: dgph
submodules/glfw/tests/beagle.build/Debug/threads.build/: dgph
submodules/glfw/tests/beagle.build/Debug/title.build/: dgph
submodules/glfw/tests/beagle.build/Debug/windows.build/: dgph
(+26 files in other folders)
